src/test/deca/context/invalid/created/Objet/Passe_3/ReturnInMain.deca
// Description:
//    teste un return du mauvais type
// Resultats:
//    ReturnInMain.deca:7:4: Error: Main does not return anything

{
    return false;
}